consistancy is key

--- a/jekyll/login/index.html
+++ b/jekyll/login/index.html
@@ -30,7 +30,7 @@ mixins: header-mixin
                   @keyup.enter.native="submit()"
               ></ui-textbox>
 
-            <div>
+            <div style="padding-top: 20px;">
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" @click="submit()"
             :disabled="disabled">
               Log in
