--- a/jekyll/useraccount/index.html
+++ b/jekyll/useraccount/index.html
@@ -14,9 +14,7 @@ mixins: header-mixin
             <a href="/omk/pages/forms/" class="backLink">
                 < Back to forms page
             </a>
-            <div class="section header">
-                <h3>User Account</h3>
-                <div class="editButotn" style="float: right;">
+            <div class="editButotn" style="float: right;">
 
                   <ui-fab
                         icon="mode_edit"
@@ -35,6 +33,8 @@ mixins: header-mixin
                     ></ui-fab>
 
                 </div>
+            <div class="section header">
+                <h3>My Account</h3>
             </div>
             <div class="section inputs" v-if="userDetails">
                   <ui-textbox
