--- a/jekyll/users/index.html
+++ b/jekyll/users/index.html
@@ -263,13 +263,13 @@ mixins: header-mixin
                     <tr v-if="tableHeader">
                       <th>Form title</th>
                       <th>Admin</th>
-                      <th>Read</th>
                       <th>Write</th>
+                      <th>Read</th>
                       <th v-show="editMode"></th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr v-for="(form, index) in activeUser.formPermissions">
+                    <tr v-for="(form, index) in orderedFormPermissions">
                        <template>
 
                        <td>
@@ -280,23 +280,9 @@ mixins: header-mixin
                            <i class="material-icons" v-if="form.admin">done</i>
                          </div>
                          <div v-show="editMode">
-                            <!-- <i class="material-icons" v-if="!form.admin" @click="setOthersToFalse(form, 'admin')">crop_3_2</i>
-                            <i class="material-icons" v-if="form.admin" @click="setOthersToFalse(form, 'admin')">done</i> -->
-                            <i class="material-icons boxWithCheck" v-if="editMode" @click="setOthersToFalse(form, 'admin')">check_box_outline_blank</i>
-                            <i class="material-icons" v-if="form.admin" @click="setOthersToFalse(form, 'admin')">done</i>
+                            <i class="material-icons" v-if="form.admin" @click="setOthersToFalse(form, 'admin')">check_box</i>
+                            <i class="material-icons" v-else @click="setOthersToFalse(form, 'admin')">check_box_outline_blank</i>
                          </div>
-
-                       </td>
-                       <td>
-                          <div v-show="!editMode">
-                            <i class="material-icons" v-if="form.read">done</i>
-                          </div>
-                          <div v-show="editMode">
-                            <!-- <i class="material-icons" v-if="!form.read" @click="setOthersToFalse(form, 'read')">crop_3_2</i>
-                            <i class="material-icons" v-if="form.read" @click="setOthersToFalse(form, 'read')">done</i> -->
-                            <i class="material-icons boxWithCheck" style="" v-if="editMode" @click="setOthersToFalse(form, 'read')">check_box_outline_blank</i>
-                            <i class="material-icons" v-if="form.read" @click="setOthersToFalse(form, 'read')">done</i>
-                          </div>
 
                        </td>
                        <td>
@@ -304,11 +290,21 @@ mixins: header-mixin
                             <i class="material-icons" v-if="form.write">done</i>
                           </div>
                           <div v-show="editMode">
-                            <!-- <i class="material-icons" v-if="!form.write" @click="setOthersToFalse(form, 'write')">crop_3_2</i>
-                            <i class="material-icons" v-if="form.write" @click="setOthersToFalse(form, 'write')">done</i> -->
-                            <i class="material-icons boxWithCheck" style="" v-if="editMode" @click="setOthersToFalse(form, 'write')">check_box_outline_blank</i>
-                            <i class="material-icons" v-if="form.write" @click="setOthersToFalse(form, 'write')">done</i>
+
+                            <i class="material-icons" v-if="form.write" @click="setOthersToFalse(form, 'write')">check_box</i>
+                            <i class="material-icons" v-else @click="setOthersToFalse(form, 'write')">check_box_outline_blank</i>
                           </div>
+                       </td>
+                       <td>
+                          <div v-show="!editMode">
+                            <i class="material-icons" v-if="form.read">done</i>
+                          </div>
+                          <div v-show="editMode">
+
+                            <i class="material-icons" v-if="form.read" @click="setOthersToFalse(form, 'read')">check_box</i>
+                            <i class="material-icons" v-else @click="setOthersToFalse(form, 'read')">check_box_outline_blank</i>
+                          </div>
+
                        </td>
 
                           <td class="trashcan" v-show="editMode">
@@ -334,10 +330,6 @@ mixins: header-mixin
               </h6>
               <div class="mdl-dialog__content">
 
-                  <!-- <select v-model="selectedForm">
-                    <option value="default" selected disabled>select your form</option>
-                    <option v-for="(form, index) in formList" :value="form.form_id">[{form.form_id}]</option>
-                  </select> -->
                   <ui-select
                       label="Forms:"
                       placeholder="Select a form"
@@ -356,29 +348,6 @@ mixins: header-mixin
                       :options="formOptions"
                       v-model="selectedFormRole"
                   ></ui-radio-group>
-                  <!-- <ul>
-                        <li>
-                          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
-                            <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="admin" v-model="selectedFormRole">
-                            <span class="mdl-radio__label">System Admin</span>
-                          </label>
-                        </li>
-                        <li>
-                          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-3">
-                            <input type="radio" id="option-3" class="mdl-radio__button" name="options" value="read"
-                            v-model="selectedFormRole">
-                            <span class="mdl-radio__label">Read & edit</span>
-                          </label>
-                        </li>
-                        <li>
-                          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
-                            <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="write"
-                            v-model="selectedFormRole">
-                            <span class="mdl-radio__label">Read only</span>
-                          </label>
-                        </li>
-                    </ul>
- -->
                   </div>
 
               </div>
