reduced font on modal title

--- a/jekyll/useraccount/index.html
+++ b/jekyll/useraccount/index.html
@@ -201,7 +201,8 @@ mixins: header-mixin
               <dialog id="deleteForm-dialog" class="mdl-dialog">
                   <div v-if="userDetails != null">
                       <h6 class="mdl-dialog__title">
-                        <i class="material-icons">minus</i> Delete form
+                        <!-- <i class="material-icons">minus</i>  -->
+                        Delete form
                       </h6>
                       <div class="mdl-dialog__content">
                       </div>
