--- a/jekyll/useraccount/index.html
+++ b/jekyll/useraccount/index.html
@@ -69,7 +69,7 @@ mixins: header-mixin
                   ></ui-textbox>
 
             </div>
-            <div class="section" v-if="user.role === 'Admin'">
+            <div class="section" v-if="user.role === 'admin'" v-cloak>
             <div>
             <h3 style="margin-bottom: 35px;">Forms:</h3>
             </div>
@@ -82,7 +82,7 @@ mixins: header-mixin
             </div>
 
 
-            <div class="section table" v-if="userDetails">
+            <div class="section table" v-if="userDetails && user.role === 'admin'" v-cloak>
               <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp" style="width: 100%" v-show="userDetails.formPermissions.length > 0">
                   <thead>
                     <tr >
