--- a/jekyll/users/index.html
+++ b/jekyll/users/index.html
@@ -210,7 +210,7 @@ mixins: header-mixin
                 </div>
 
             <div class="section header">
-                <h3>User account</h3>
+                <h3>User account: [{activeUser.username}]</h3>
             </div>
             <div class="section inputs" v-if="activeUser != null">
 
