Fixed issue with app level permission should trump the form level

--- a/jekyll/login/index.html
+++ b/jekyll/login/index.html
@@ -25,6 +25,7 @@ mixins: header-mixin
               <ui-textbox
                   floating-label
                   label=Password
+                  type="password"
                   placeholder="Enter your password"
                   v-model="credentials.password"
                   @keyup.enter.native="submit()"
