Fixed issue #20. Styled the Enketo modal like the rest

--- a/jekyll/forms/index.html
+++ b/jekyll/forms/index.html
@@ -65,9 +65,9 @@ mixins: header-mixin
     </div>
     <div class="mdl-dialog__actions">
         <a id="open-enketo-url" href="#" target="_blank">
-            <button type="button" class="mdl-button mdl-js-button mdl-button--raised">Open</button>
+            <button type="button" class="mdl-button mdl-js-button modalButton">Open</button>
         </a>
-        <button type="button" class="mdl-button mdl-js-button mdl-button--raised close">Close</button>
+        <button type="button" class="mdl-button mdl-js-button close modalButton">Close</button>
     </div>
 </dialog>
 
