--- a/jekyll/upload-form/index.html
+++ b/jekyll/upload-form/index.html
@@ -25,6 +25,12 @@ mixins: header-mixin
             </div>
 
             <input type="submit" name="submit" value="Submit" class="mdl-button mdl-button--raised mdl-button--colored submitButton" :disabled="disabled">
+
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored submitButton" @click.prevent="fileName = null"
+            :disabled="disabled">
+              Cancel
+            </button>
+
             <progress min="0" max="100" value="progress" @click="showSnackBar()" v-show="progress > 0">[{ progress }]% complete</progress>
         </ajax-form>
 
