--- a/jekyll/upload-form/index.html
+++ b/jekyll/upload-form/index.html
@@ -26,8 +26,8 @@ mixins: header-mixin
 
             <input type="submit" name="submit" value="Submit" class="mdl-button mdl-button--raised mdl-button--colored submitButton" :disabled="disabled">
 
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored submitButton" @click.prevent="fileName = null"
-            :disabled="disabled">
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored submitButton" @click.prevent="cancelUpload()"
+            :disabled="disabled" v-if="fileName">
               Cancel
             </button>
 
