--- a/jekyll/forms/index.html
+++ b/jekyll/forms/index.html
@@ -64,7 +64,7 @@ mixins: header-mixin
         <p>Fill out survey online with Enketo Express</p>
     </div>
     <div class="mdl-dialog__actions">
-        <a id="open-enketo-url" href="#" target="_blank">
+        <a id="open-enketo-url" href="#">
             <button type="button" class="mdl-button mdl-js-button modalButton">Open</button>
         </a>
         <button type="button" class="mdl-button mdl-js-button close modalButton">Close</button>
