--- a/jekyll/submissions/index.html
+++ b/jekyll/submissions/index.html
@@ -31,9 +31,9 @@ mixins: header-mixin
 
                 <div class="mdl-card__actions mdl-card--border">
                     <!-- Left aligned menu on top of button  -->
-                    <button id="odk-options" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    <!-- <button id="odk-options" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                         ODK Data
-                    </button>
+                    </button> -->
                     <!-- <button id="osm-options" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                         OSM Data
                     </button> -->
